--- a/Front-End/Front/src/app/sign-up/sign-up.component.html
+++ b/Front-End/Front/src/app/sign-up/sign-up.component.html
@@ -15,13 +15,19 @@
       <div style="text-align: center; margin-top: 20px; ;">
         <button mat-raised-button color="primary" class="btn" style="width: 90%;margin-bottom: 20px;">Log In</button>
       </div>
-   </form>
-
-
+      <div class="lien">
+        <a href="#">Forgot Password</a>
+      </div>
+      <div class="lien_signup" style="margin-top: 10px;margin-bottom: 10px;">
+        <a href="" style="color: rgb(27, 61, 156);"> Vous n'avez pas de compte </a>
+      </div>
       
+   </form>      
   </div>
   <div class="description">
-    Bonjour a notre application
+    <h1>Bienvenue à la connexion</h1>
+    <p>Vous n'avez pas de compte</p>
+    <button mat-raised-button class="btn">Sing Up</button>
   </div>
 
 </div>
