--- a/Front-End/Front/src/styles.css
+++ b/Front-End/Front/src/styles.css
@@ -1,3 +1,6 @@
 
 html, body { height: 100%; }
-body { margin: 0; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif }
+body { margin: 0; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif}
+.cdk-overlay-container {
+    z-index: 1050; /* Ajuster pour que le datepicker s'affiche au-dessus de Bootstrap */
+  }
